Post Card - Fix vertical layout alignment

--- a/styles/input.css
+++ b/styles/input.css
@@ -898,10 +898,11 @@ leptos-island{
         .post-card {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            justify-content: flex-start;
             width: 100%;
             position: relative;
         }
+
         .post-card__underlay {
             position: absolute;
             top: 0;
